frontend: form: Allow to add fixed text as if it was a form element
While <input> has a `readonly` property, this is visually too much
alike to an editable <input> field. So we render it as plain text
instead.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -162,7 +162,7 @@ label {
     border-radius: 0.3em;
 }
 
-label, input, select, textarea, .form-element, .validation-message {
+label, input, select, textarea, .form-element, .form-fixed-text-element, .validation-message {
     display: inline-block;
     vertical-align: top;
     margin: 0.3em 0em 0.3em 1em;
